[project]
name = "ml-physical-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "metaflow>=2.13",
    "notebook>=7.3.1",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pyjanitor>=0.30.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
]
